--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-merge": "^4.2.2",
+    "webpack-stream": "^4.0.0",
     "webpack-modules": "^1.0.0"
   },
   "dependencies": {
