--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jquery.animate-number": "0.0.14",
     "mithril": "^2.0.4",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.1.3",
+    "wowjs": "^1.1.3"
   }
 }
