資料流動結構變更

--- a/data/knowledge.json
+++ b/data/knowledge.json
@@ -1,5 +1,5 @@
 {
-    "knowledge":[{
+    "list":[{
         "keyword": ["knowledge","UHD","Panel","Displays"],
         "article": [{
             "type": "post",
