--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@fancyapps/fancybox": "^3.5.7",
     "classnames": "^2.2.6",
     "iframe-lightbox": "^0.2.8",
+    "is-in-viewport": "^3.0.4",
     "jquery": "^3.4.1",
     "jquery-migrate": "^3.1.0",
     "jquery.animate-number": "0.0.14",
