--- a/data/knowledge.json
+++ b/data/knowledge.json
@@ -105,5 +105,6 @@
             "alt": "NPP LED",
             "src": "./images/knowledge/knowledge-img10.png"
         }]
-    }]
+    }],
+    "keyword":["knowledge","Interactivity","VR","Cinematic","Blue Light","FOV","Gaming","MCL","Laser","Game","Viewing","3D","HDR","Panel","Displays","UHD"]
 }
