需求修改、滾動放大動畫

--- a/data/knowledge.json
+++ b/data/knowledge.json
@@ -24,7 +24,7 @@
             "src": "./images/knowledge/knowledge-img2.png"
         },{
             "type": "youtube",
-            "url": "https://www.youtube.com/watch?v=RD6x79PyJR0",
+            "url": "https://www.youtube.com/watch?v=Rr4WH3qRpd8",
             "heading": "DuraCore Laser",
             "figcaption": "Maintenance-free laser light sources delivers a minimum of 20,000 hours in full brightness mode.",
             "title": "DuraCore Laser",
@@ -56,7 +56,7 @@
         "keyword": ["knowledge","Gaming","Game","Competition"],
         "article": [{
             "type": "youtube",
-            "url": "https://www.youtube.com/watch?v=RD6x79PyJR0",
+            "url": "https://www.youtube.com/watch?v=Rr4WH3qRpd8",
             "heading": "Gaming",
             "figcaption": "Optoma’s Enhanced Gaming Mode gives gamers a best-in-class response time to keep gamers engaged with even the most demanding requirements.",
             "title": "Gaming",
