--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BambooDiary",
+  "name": "optoma",
   "version": "1.0.0",
   "main": "webpack.config.js",
   "directories": {
@@ -7,9 +7,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --config webpack.config.js",
-    "watch": "webpack --watch",
-    "production": "webpack --env.NODE_ENV=local --env.production --progress",
+    "build": "SET NODE_ENV=development && webpack",
+    "watch": "SET NODE_ENV=development_watch && webpack --watch",
+    "scss": "SET NODE_ENV=scss_compile && webpack",
     "gulp": "./node_modules/.bin/gulp"
   },
   "author": "",
@@ -26,17 +26,25 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.3.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-merge": "^4.2.2",
-    "webpack-stream": "^4.0.0",
-    "webpack-modules": "^1.0.0"
+    "webpack-modules": "^1.0.0",
+    "webpack-stream": "^4.0.0"
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
